--- a/css/main.css
+++ b/css/main.css
@@ -174,39 +174,39 @@ SUPER SLICK TRANSFORMS
 }
 
 /* line 20, ../sass/_transforms.scss */
-.fly-in-down {
-  -webkit-animation: flyindown 1000ms ease;
-  -moz-animation: flyindown 1000ms ease;
-  -ms-animation: flyindown 1000ms ease;
-  -o-animation: flyindown 1000ms ease;
-  animation: flyindown 1000ms ease;
+.fly-in-down, .new-message {
+  -webkit-animation: flyindown 200ms ease;
+  -moz-animation: flyindown 200ms ease;
+  -ms-animation: flyindown 200ms ease;
+  -o-animation: flyindown 200ms ease;
+  animation: flyindown 200ms ease;
 }
 
 /* line 27, ../sass/_transforms.scss */
 .fly-in-up {
-  opacity: 0.85;
-  -webkit-animation: flyinup 1000ms ease;
-  -moz-animation: flyinup 1000ms ease;
-  -o-animation: flyinup 1000ms ease;
-  animation: flyinup 1000ms ease;
+  opacity: 0.1;
+  -webkit-animation: flyinup 200ms ease;
+  -moz-animation: flyinup 200ms ease;
+  -o-animation: flyinup 200ms ease;
+  animation: flyinup 200ms ease;
 }
 
 /* line 35, ../sass/_transforms.scss */
 .fly-in-right {
-  opacity: 0 0.85;
-  -webkit-animation: flyinright 1000ms ease;
-  -moz-animation: flyinright 1000ms ease;
-  -o-animation: flyinright 1000ms ease;
-  animation: flyinright 1000ms ease;
+  opacity: 0 0.1;
+  -webkit-animation: flyinright 200ms ease;
+  -moz-animation: flyinright 200ms ease;
+  -o-animation: flyinright 200ms ease;
+  animation: flyinright 200ms ease;
 }
 
 /* line 43, ../sass/_transforms.scss */
 .fly-in-left {
-  opacity: 0.85;
-  -webkit-animation: flyinleft 1000ms ease;
-  -moz-animation: flyinleft 1000ms ease;
-  -o-animation: flyinleft 1000ms ease;
-  animation: flyinleft 1000ms ease;
+  opacity: 0.1;
+  -webkit-animation: flyinleft 200ms ease;
+  -moz-animation: flyinleft 200ms ease;
+  -o-animation: flyinleft 200ms ease;
+  animation: flyinleft 200ms ease;
 }
 
 /*flyindown*/
@@ -901,7 +901,6 @@ SUPER SLICK TRANSFORMS
   list-style-type: none;
   max-width: 31em;
   border-radius: .5em;
-  margin-bottom: 2em;
 }
 
 /* line 12, ../sass/_messages.scss */
@@ -914,7 +913,7 @@ SUPER SLICK TRANSFORMS
   position: relative;
 }
 
-/* line 20, ../sass/_messages.scss */
+/* line 24, ../sass/_messages.scss */
 .avatar {
   height: 1.8em;
   width: 1.8em;
@@ -930,12 +929,12 @@ SUPER SLICK TRANSFORMS
   top: -0.9em;
 }
 
-/* line 40, ../sass/_messages.scss */
+/* line 44, ../sass/_messages.scss */
 .avatar-border {
   border: 1px solid darkgrey;
 }
 
-/* line 43, ../sass/_messages.scss */
+/* line 47, ../sass/_messages.scss */
 .text {
   display: inline-block;
   vertical-align: middle;
@@ -948,17 +947,23 @@ SUPER SLICK TRANSFORMS
   hyphens: auto;
 }
 
-/* line 57, ../sass/_messages.scss */
+/* line 61, ../sass/_messages.scss */
 .username {
   display: none;
+  position: absolute;
 }
 
-/* line 61, ../sass/_messages.scss */
+/* line 65, ../sass/_messages.scss */
+.avatar:hover ~ .username {
+  display: block;
+}
+
+/* line 69, ../sass/_messages.scss */
 .message-image-wrapper {
   position: relative;
   display: inline-block;
 }
-/* line 67, ../sass/_messages.scss */
+/* line 75, ../sass/_messages.scss */
 .message-image-wrapper .open-in-new-tab {
   position: absolute;
   top: .2em;
@@ -969,21 +974,21 @@ SUPER SLICK TRANSFORMS
   background-size: 100%;
 }
 
-/* line 77, ../sass/_messages.scss */
+/* line 85, ../sass/_messages.scss */
 .message-image {
   display: inline-block;
   max-height: 5em;
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 83, ../sass/_messages.scss */
+/* line 91, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 32em;
   max-height: inherit;
   width: 100%;
 }
 
-/* line 90, ../sass/_messages.scss */
+/* line 98, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -991,27 +996,27 @@ SUPER SLICK TRANSFORMS
   border-top: 1px solid lightgrey;
 }
 
-/* line 96, ../sass/_messages.scss */
+/* line 104, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 103, ../sass/_messages.scss */
-.cssanimations.csstransitions .realtime {
+/* line 111, ../sass/_messages.scss */
+.cssanimations.csstransitions .slick-realtime-shit {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
   -o-animation: realtime-anim 10s ease-out;
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 121, ../sass/_messages.scss */
+/* line 118, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 124, ../sass/_messages.scss */
+/* line 121, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1028,60 +1033,60 @@ SUPER SLICK TRANSFORMS
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 154, ../sass/_messages.scss */
+  /* line 149, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 155, ../sass/_messages.scss */
+  /* line 150, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 158, ../sass/_messages.scss */
+  /* line 153, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 159, ../sass/_messages.scss */
+  /* line 154, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 162, ../sass/_messages.scss */
+  /* line 157, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 163, ../sass/_messages.scss */
+  /* line 158, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 166, ../sass/_messages.scss */
+  /* line 161, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 167, ../sass/_messages.scss */
+  /* line 162, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 170, ../sass/_messages.scss */
+  /* line 165, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 171, ../sass/_messages.scss */
+  /* line 166, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
