semi fixed paragraphs in messages

--- a/css/main.css
+++ b/css/main.css
@@ -935,7 +935,7 @@ SUPER SLICK TRANSFORMS
 }
 
 /* line 47, ../sass/_messages.scss */
-.text {
+.message .text, .message p {
   display: inline-block;
   vertical-align: middle;
   margin: .2em .3em;
