--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -44,7 +44,7 @@
 		.avatar-border{
 			border:1px solid darkgrey;
 		}
-		.text{
+		.message .text, .message p{
 			display: inline-block;
 			vertical-align: middle;
 			margin: .2em .3em;
