remove avatar hover show username

--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -63,7 +63,7 @@
 			position:absolute;
 		}
 		.avatar:hover ~ .username{
-			display:block;
+			// display:block;
 		}
 
 		.message-image-wrapper{
