fixed logging the shit out

--- a/client/views/room.html
+++ b/client/views/room.html
@@ -35,7 +35,7 @@
 	{{/isolate}}
 	<div class="main">
 
-		<div class="loading show-loading">One sec, fetching your messages..</div>
+		<div class="loading">One sec, fetching your messages..</div>
 		
 		{{>messages}}
 		
