--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -15,15 +15,16 @@
 	
 	
 
-	// -webkit-transition: all $animation-duration ease-in-out;
-	// -moz-transition: all $animation-duration ease-in-out;
-	// -ms-transition: all $animation-duration ease-in-out;
-	// -o-transition: all $animation-duration ease-in-out;
-	// transition: all $animation-duration ease-in-out;
+	
 
 	@media all and (max-width: $limit + $sidebar-width*2){
 		left: - $sidebar-width - 1em !important;
 		padding:5em 2em 4em;
+		-webkit-transition: all $animation-duration ease-in-out;
+		-moz-transition: all $animation-duration ease-in-out;
+		-ms-transition: all $animation-duration ease-in-out;
+		-o-transition: all $animation-duration ease-in-out;
+		transition: all $animation-duration ease-in-out;
 	}
 	
 	/*prevent flicker*/
