fixed login popup ff

--- a/client/views/loginForm.html
+++ b/client/views/loginForm.html
@@ -2,10 +2,10 @@
 	{{#unless loggingIn}}
 		<div class="blanket login-form">
 			<h5>Sign in with</h5>
-			<img class='serviceLogin twitter' src="/images/social/twitter.png" alt="">
-			<img class='serviceLogin github' src="/images/social/github.png" alt="">
-			<img class='serviceLogin facebook' src="/images/social/facebook.png" alt="">
-			<img class='serviceLogin google' src="/images/social/google.png" alt="">
+			<a href="#" class="serviceLogin twitter"><img class='serviceLogin twitter' src="/images/social/twitter.png" alt=""></a>
+			<a href="#" class="serviceLogin github"><img class='serviceLogin github' src="/images/social/github.png" alt=""></a>
+			<a href="#" class="serviceLogin facebook"><img class='serviceLogin facebook' src="/images/social/facebook.png" alt=""></a>
+			<a href="#" class="serviceLogin google"><img class='serviceLogin google' src="/images/social/google.png" alt=""></a>
 		</div>
 	{{/unless}}
 </template>
