--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -45,9 +45,9 @@
 			border:1px solid darkgrey;
 		}
 		.message .text, .message p{
-			display: inline-block;
 			vertical-align: middle;
-			margin: .2em .3em;
+			margin: 0em .3em;
+			padding:.1em;
 			// margin-top:.2em;
 			// margin-bottom:.2em;
 			-ms-word-break: break-all;
