--- a/client/sass/_transforms.scss
+++ b/client/sass/_transforms.scss
@@ -50,95 +50,95 @@ $duration: 200ms;
 }
 
 
-$how-much: 1em;
+$offset: .5em;
 
 
 /*flyindown*/
 @-webkit-keyframes flyindown {
-  0% {-webkit-transform: translate(0, $how-much);} 
+  0% {-webkit-transform: translate(0, $offset);} 
   100% {opacity:1;-webkit-transform: translate(0,0);}
 }
 @-moz-keyframes flyindown {
-  0% {-moz-transform: translate(0, $how-much);} 
+  0% {-moz-transform: translate(0, $offset);} 
   100% {opacity:1;-moz-transform: translate(0,0);}
 }
 @-ms-keyframes flyindown {
-  0% {-ms-transform: translate(0, $how-much);} 
+  0% {-ms-transform: translate(0, $offset);} 
   100% {opacity:1;-ms-transform: translate(0,0);}
 }
 @-o-keyframes flyindown {
-  0% {-o-transform: translate(0, $how-much);} 
+  0% {-o-transform: translate(0, $offset);} 
   100% {opacity:1;-o-transform: translate(0,0);}
 }
 @keyframes flyindown {
-  0% {transform: translate(0, $how-much);} 
+  0% {transform: translate(0, $offset);} 
   100% {opacity:1;transform: translate(0,0);}
 }
 
 /*flyinup*/
 @-webkit-keyframes flyinup {
-  0% {-webkit-transform: translate(0,-$how-much);} 
+  0% {-webkit-transform: translate(0,-$offset);} 
   100% {opacity:1;-webkit-transform: translate(0,0);}
 }
 @-moz-keyframes flyinup {
-  0% {-moz-transform:  translate(0,-$how-much);} 
+  0% {-moz-transform:  translate(0,-$offset);} 
   100% {opacity:1;-moz-transform: translate(0,0);}
 }
 @-ms-keyframes flyinup {
-  0% {-ms-transform: translate(0,-$how-much);} 
+  0% {-ms-transform: translate(0,-$offset);} 
   100% {opacity:1;-ms-transform: translate(0,0);}
 }
 @-o-keyframes flyinup {
-  0% {-o-transform:  translate(0,-$how-much);} 
+  0% {-o-transform:  translate(0,-$offset);} 
   100% {opacity:1;-o-transform: translate(0,0);}
 }
 @keyframes flyinup {
-  0% {transform: translate(0,-$how-much)} 
+  0% {transform: translate(0,-$offset)} 
   100% {opacity:1;transform: translate(0,0);}
 }
 
 /*flyinright*/
 @-webkit-keyframes flyinright {
-  0% {-webkit-transform: translate(-$how-much,0);} 
+  0% {-webkit-transform: translate(-$offset,0);} 
   100% {opacity:1;-webkit-transform: translate(0,0);}
 }
 @-moz-keyframes flyinright {
-  0% {-moz-transform:  translate(-$how-much,0);} 
+  0% {-moz-transform:  translate(-$offset,0);} 
   100% {opacity:1;-moz-transform: translate(0,0);}
 }
 @-ms-keyframes flyinright {
-  0% {-ms-transform: translate(-$how-much,0);
+  0% {-ms-transform: translate(-$offset,0);
   } 
   100% {opacity:1;-ms-transform: translate(0,0);}
 }
 @-o-keyframes flyinright {
-  0% {-o-transform:  translate(-$how-much,0);} 
+  0% {-o-transform:  translate(-$offset,0);} 
   100% {opacity:1;-o-transform: translate(0,0);}
 }
 @keyframes flyinright{
-  0% {transform: translate(-$how-much,0)} 
+  0% {transform: translate(-$offset,0)} 
   100% {opacity:1;transform: translate(0,0);}
 }
 
 /*flyinleft*/
 @-webkit-keyframes flyinleft {
-  0% {-webkit-transform: translate($how-much,0);} 
+  0% {-webkit-transform: translate($offset,0);} 
   100% {opacity:1;-webkit-transform: translate(0,0);}
 }
 @-moz-keyframes flyinleft {
-  0% {-moz-transform:  translate($how-much,0);} 
+  0% {-moz-transform:  translate($offset,0);} 
   100% {opacity:1;-moz-transform: translate(0,0);}
 }
 @-ms-keyframes flyinleft {
-  0% {-ms-transform: translate($how-much,0);
+  0% {-ms-transform: translate($offset,0);
   } 
   100% {opacity:1;-ms-transform: translate(0,0);}
 }
 @-o-keyframes flyinleft {
-  0% {-o-transform:  translate($how-much,0);} 
+  0% {-o-transform:  translate($offset,0);} 
   100% {opacity:1;-o-transform: translate(0,0);}
 }
 @keyframes flyinleft {
-  0% {transform: translate($how-much,0)} 
+  0% {transform: translate($offset,0)} 
   100% {opacity:1;transform: translate(0,0);}
 }
