--- a/client/css/main.css
+++ b/client/css/main.css
@@ -773,18 +773,34 @@ SUPER SLICK TRANSFORMS
   margin-top: 1.5em;
   text-align: left;
   list-style-type: none;
+  text-align: center;
+}
+/* line 118, ../sass/_sidebar.scss */
+.online-users li {
+  margin-left: 0;
 }
 
-/* line 117, ../sass/_sidebar.scss */
+/* line 122, ../sass/_sidebar.scss */
+.online-users-heading {
+  text-align: center;
+}
+
+/* line 125, ../sass/_sidebar.scss */
 .online-user {
-  display: block;
+  display: inline-block;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   color: #444;
 }
 
-/* line 125, ../sass/_sidebar.scss */
+/* line 132, ../sass/_sidebar.scss */
+.online-user-wrapper {
+  text-align: left;
+  margin-left: 3em !important;
+}
+
+/* line 137, ../sass/_sidebar.scss */
 .roomid {
   margin-top: 3em;
   text-align: center;
@@ -792,13 +808,13 @@ SUPER SLICK TRANSFORMS
   color: #805e00;
 }
 
-/* line 131, ../sass/_sidebar.scss */
+/* line 143, ../sass/_sidebar.scss */
 .online-users, .roomid {
   float: right;
   width: 100%;
 }
 
-/* line 136, ../sass/_sidebar.scss */
+/* line 148, ../sass/_sidebar.scss */
 .online-users-count {
   color: #444444;
   font-weight: bold;
@@ -824,7 +840,7 @@ SUPER SLICK TRANSFORMS
   */
 }
 @media all and (max-width: 62em) {
-  /* line 136, ../sass/_sidebar.scss */
+  /* line 148, ../sass/_sidebar.scss */
   .online-users-count {
     left: 0 !important;
     opacity: 1;
@@ -833,7 +849,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 177, ../sass/_sidebar.scss */
+/* line 189, ../sass/_sidebar.scss */
 .toggle-sidebar {
   display: none;
   cursor: pointer;
@@ -850,39 +866,38 @@ SUPER SLICK TRANSFORMS
   border: 0.1em solid #cc9600;
 }
 @media all and (max-width: 62em) {
-  /* line 177, ../sass/_sidebar.scss */
+  /* line 189, ../sass/_sidebar.scss */
   .toggle-sidebar {
     display: block;
     left: 0 !important;
   }
 }
-/* line 202, ../sass/_sidebar.scss */
+/* line 214, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.7325em 0 0 0.7325em;
 }
 
-/* line 211, ../sass/_sidebar.scss */
+/* line 223, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
   display: inline-block;
   margin: .4em .5em 0 0;
   border-radius: 70%;
-  float: left;
   opacity: .5;
 }
-/* line 222, ../sass/_sidebar.scss */
+/* line 234, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 225, ../sass/_sidebar.scss */
+/* line 237, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 231, ../sass/_sidebar.scss */
+/* line 243, ../sass/_sidebar.scss */
 .logo {
   position: absolute;
   top: 1.5em;
@@ -948,17 +963,28 @@ SUPER SLICK TRANSFORMS
 }
 
 /* line 61, ../sass/_messages.scss */
+code {
+  white-space: pre;
+  word-wrap: normal;
+  background-color: #333;
+  overflow: auto;
+  color: #fff;
+  padding: .7em;
+  border-radius: .2em;
+  display: block;
+}
+
+/* line 72, ../sass/_messages.scss */
 .username {
   display: none;
   position: absolute;
 }
 
-/* line 69, ../sass/_messages.scss */
+/* line 80, ../sass/_messages.scss */
 .message-image-wrapper {
   position: relative;
-  display: inline-block;
 }
-/* line 75, ../sass/_messages.scss */
+/* line 86, ../sass/_messages.scss */
 .message-image-wrapper .open-in-new-tab {
   position: absolute;
   top: .2em;
@@ -969,21 +995,21 @@ SUPER SLICK TRANSFORMS
   background-size: 100%;
 }
 
-/* line 85, ../sass/_messages.scss */
+/* line 96, ../sass/_messages.scss */
 .message-image {
   display: inline-block;
   max-height: 5em;
   margin-top: .2em;
   margin-top: .2em;
 }
-/* line 91, ../sass/_messages.scss */
+/* line 102, ../sass/_messages.scss */
 .message-image.exp {
   max-width: 32em;
   max-height: inherit;
   width: 100%;
 }
 
-/* line 98, ../sass/_messages.scss */
+/* line 109, ../sass/_messages.scss */
 .diffUser {
   margin-top: .8em;
   border-top-right-radius: .5em;
@@ -991,14 +1017,14 @@ SUPER SLICK TRANSFORMS
   border-top: 1px solid lightgrey;
 }
 
-/* line 104, ../sass/_messages.scss */
+/* line 115, ../sass/_messages.scss */
 .lastOfUser {
   border-bottom: 1px solid lightgrey;
   border-bottom-right-radius: .5em;
   border-bottom-left-radius: .5em;
 }
 
-/* line 111, ../sass/_messages.scss */
+/* line 122, ../sass/_messages.scss */
 .cssanimations.csstransitions .slick-realtime-shit {
   -webkit-animation: realtime-anim 10s ease-out;
   -moz-animation: realtime-anim 10s ease-out;
@@ -1006,12 +1032,12 @@ SUPER SLICK TRANSFORMS
   animation: realtime-anim 10s ease-out;
 }
 
-/* line 118, ../sass/_messages.scss */
+/* line 129, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 121, ../sass/_messages.scss */
+/* line 132, ../sass/_messages.scss */
 #mymessage {
   resize: none !important;
   width: 100%;
@@ -1028,60 +1054,60 @@ SUPER SLICK TRANSFORMS
 }
 
 @-webkit-keyframes realtime-anim {
-  /* line 149, ../sass/_messages.scss */
+  /* line 160, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 150, ../sass/_messages.scss */
+  /* line 161, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-moz-keyframes realtime-anim {
-  /* line 153, ../sass/_messages.scss */
+  /* line 164, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 154, ../sass/_messages.scss */
+  /* line 165, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-ms-keyframes realtime-anim {
-  /* line 157, ../sass/_messages.scss */
+  /* line 168, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 158, ../sass/_messages.scss */
+  /* line 169, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @-o-keyframes realtime-anim {
-  /* line 161, ../sass/_messages.scss */
+  /* line 172, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 162, ../sass/_messages.scss */
+  /* line 173, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
 }
 
 @keyframes realtime-anim {
-  /* line 165, ../sass/_messages.scss */
+  /* line 176, ../sass/_messages.scss */
   0% {
     border-left: 1px solid #ffbb00;
   }
 
-  /* line 166, ../sass/_messages.scss */
+  /* line 177, ../sass/_messages.scss */
   100% {
     border-left: 1px solid lightgrey;
   }
