--- a/client/sass/_messages.scss
+++ b/client/sass/_messages.scss
@@ -58,6 +58,17 @@
 			-moz-hyphens: auto;
 			hyphens: auto;
 		}
+		code{
+			white-space: pre;
+			word-wrap: normal;
+			background-color: #333;
+			overflow: auto;
+			color: #fff;
+			padding: .7em;
+			border-radius: .2em;
+			display: block;
+		}
+
 		.username{
 			display:none;
 			position:absolute;
@@ -68,7 +79,7 @@
 
 		.message-image-wrapper{
 			position: relative;
-			display: inline-block;
+			// display: inline-block;
 			// float:left;
 			// clear:left;
 
