--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -4,8 +4,22 @@
 	</div>
 	<div class="welcome-mast">
 		<div class="welcome-mast-cont">
-			<h1>opentalk.me</h1>
-			<h4></h4>
+			<h1>Chat in <b>realtime</b>, for real</h1>
+			<img src="/images/logo_even_white.svg" class='logo-welcome'/>
+			<h6>No signup required</h6>
+			<h6>Simple and uncluttered UI</h6>
+			<h6>Markdown support? hell yeah</h6>
+			<h6>Uh! I almost forgot: it's <b><a style='color:#222;' href="https://github.com/christian-fei/opentalk.me">opensource</a></b></h6>
+		</div>
+	</div>
+	<div class="features">
+		<div class="features-wrapper">
+			<div class="feature">0</div>
+			<div class="feature">0</div>
+			<div class="feature">0</div>
+			<div class="feature">0</div>
+			<div class="feature">0</div>
+			<div class="feature">0</div>
 		</div>
 	</div>
 </template>
