--- a/client/css/main.css
+++ b/client/css/main.css
@@ -496,14 +496,26 @@ SUPER SLICK TRANSFORMS
   -o-animation-fill-mode: both;
   animation-fill-mode: both;
 }
-/* line 23, ../sass/_welcome.scss */
+@media all and (max-width: 30em) {
+  /* line 9, ../sass/_welcome.scss */
+  .welcome-mast-cont {
+    padding: 5em 3em;
+  }
+}
+/* line 27, ../sass/_welcome.scss */
 .welcome-mast-cont h1 {
   color: #222;
-  text-shadow: 5px 5px 20px 50px white;
-  font-family: 'Source Sans Pro', sans-serif;
 }
 
-/* line 30, ../sass/_welcome.scss */
+/* line 32, ../sass/_welcome.scss */
+.logo-welcome {
+  display: block;
+  margin: 1rem auto;
+  height: 3.75rem;
+  width: 3.75rem;
+}
+
+/* line 40, ../sass/_welcome.scss */
 #roomid {
   position: relative;
   padding: 1em;
@@ -517,7 +529,7 @@ SUPER SLICK TRANSFORMS
   margin-top: -.3em;
 }
 
-/* line 47, ../sass/_welcome.scss */
+/* line 57, ../sass/_welcome.scss */
 .blanket, .blanket-white {
   position: relative;
   display: table;
@@ -530,81 +542,104 @@ SUPER SLICK TRANSFORMS
   background: url("/images/pattern-black.png");
 }
 @media all and (max-width: 32em) {
-  /* line 47, ../sass/_welcome.scss */
+  /* line 57, ../sass/_welcome.scss */
   .blanket, .blanket-white {
     margin: 2.5em 1em;
   }
 }
 
-/* line 67, ../sass/_welcome.scss */
+/* line 77, ../sass/_welcome.scss */
 .medium-text {
   font-size: 1.3em;
 }
 
-/* line 70, ../sass/_welcome.scss */
+/* line 80, ../sass/_welcome.scss */
 .vam {
   vertical-align: middle;
   display: table-cell;
 }
 
 @-webkit-keyframes welcome-mast-anim {
-  /* line 78, ../sass/_welcome.scss */
+  /* line 88, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 79, ../sass/_welcome.scss */
+  /* line 89, ../sass/_welcome.scss */
   to {
     background-position: 0 -312px;
   }
 }
 
 @-moz-keyframes welcome-mast-anim {
-  /* line 82, ../sass/_welcome.scss */
+  /* line 92, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 83, ../sass/_welcome.scss */
+  /* line 93, ../sass/_welcome.scss */
   to {
     background-position: 0 -312px;
   }
 }
 
 @-ms-keyframes welcome-mast-anim {
-  /* line 86, ../sass/_welcome.scss */
+  /* line 96, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 87, ../sass/_welcome.scss */
+  /* line 97, ../sass/_welcome.scss */
   to {
     background-position: 0 -312px;
   }
 }
 
 @-o-keyframes welcome-mast-anim {
-  /* line 90, ../sass/_welcome.scss */
+  /* line 100, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 91, ../sass/_welcome.scss */
+  /* line 101, ../sass/_welcome.scss */
   to {
     background-position: 0 -312px;
   }
 }
 
 @keyframes welcome-mast-anim {
-  /* line 94, ../sass/_welcome.scss */
+  /* line 104, ../sass/_welcome.scss */
   from {
     background-position: 0 0;
   }
 
-  /* line 95, ../sass/_welcome.scss */
+  /* line 105, ../sass/_welcome.scss */
   to {
     background-position: 0 -312px;
   }
+}
+
+/* line 110, ../sass/_welcome.scss */
+.features {
+  background: white;
+  width: 100%;
+  float: left;
+  padding: 2em;
+}
+
+/* line 116, ../sass/_welcome.scss */
+.features-wrapper {
+  max-width: 32em;
+  margin: auto;
+}
+
+/* line 120, ../sass/_welcome.scss */
+.feature {
+  display: inline-block;
+  width: 33.3%;
+  background: grey;
+  padding: 2em;
+  float: left;
 }
 
 /* line 1, ../sass/_room.scss */
@@ -760,32 +795,37 @@ SUPER SLICK TRANSFORMS
 }
 
 /* line 96, ../sass/_sidebar.scss */
+.buttons-wrapper {
+  text-align: center;
+}
+
+/* line 99, ../sass/_sidebar.scss */
 #logout, #toggleRealtime {
-  float: left;
-  margin-left: 0.8em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
   margin-top: 0.6em;
   text-decoration: none;
   border: 1px solid darkgrey;
 }
 
-/* line 112, ../sass/_sidebar.scss */
+/* line 116, ../sass/_sidebar.scss */
 .online-users {
   margin-top: 1.5em;
   text-align: left;
   list-style-type: none;
   text-align: center;
 }
-/* line 118, ../sass/_sidebar.scss */
+/* line 122, ../sass/_sidebar.scss */
 .online-users li {
   margin-left: 0;
 }
 
-/* line 122, ../sass/_sidebar.scss */
+/* line 126, ../sass/_sidebar.scss */
 .online-users-heading {
   text-align: center;
 }
 
-/* line 125, ../sass/_sidebar.scss */
+/* line 129, ../sass/_sidebar.scss */
 .online-user {
   display: inline-block;
   text-overflow: ellipsis;
@@ -794,13 +834,13 @@ SUPER SLICK TRANSFORMS
   color: #444;
 }
 
-/* line 132, ../sass/_sidebar.scss */
+/* line 136, ../sass/_sidebar.scss */
 .online-user-wrapper {
   text-align: left;
   margin-left: 3em !important;
 }
 
-/* line 137, ../sass/_sidebar.scss */
+/* line 141, ../sass/_sidebar.scss */
 .roomid {
   margin-top: 3em;
   text-align: center;
@@ -808,13 +848,13 @@ SUPER SLICK TRANSFORMS
   color: #805e00;
 }
 
-/* line 143, ../sass/_sidebar.scss */
+/* line 147, ../sass/_sidebar.scss */
 .online-users, .roomid {
   float: right;
   width: 100%;
 }
 
-/* line 148, ../sass/_sidebar.scss */
+/* line 152, ../sass/_sidebar.scss */
 .online-users-count {
   color: #444444;
   font-weight: bold;
@@ -840,7 +880,7 @@ SUPER SLICK TRANSFORMS
   */
 }
 @media all and (max-width: 62em) {
-  /* line 148, ../sass/_sidebar.scss */
+  /* line 152, ../sass/_sidebar.scss */
   .online-users-count {
     left: 0 !important;
     opacity: 1;
@@ -849,7 +889,7 @@ SUPER SLICK TRANSFORMS
   }
 }
 
-/* line 189, ../sass/_sidebar.scss */
+/* line 193, ../sass/_sidebar.scss */
 .toggle-sidebar {
   display: none;
   cursor: pointer;
@@ -866,20 +906,20 @@ SUPER SLICK TRANSFORMS
   border: 0.1em solid #cc9600;
 }
 @media all and (max-width: 62em) {
-  /* line 189, ../sass/_sidebar.scss */
+  /* line 193, ../sass/_sidebar.scss */
   .toggle-sidebar {
     display: block;
     left: 0 !important;
   }
 }
-/* line 214, ../sass/_sidebar.scss */
+/* line 218, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.7325em 0 0 0.7325em;
 }
 
-/* line 223, ../sass/_sidebar.scss */
+/* line 227, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
@@ -888,16 +928,16 @@ SUPER SLICK TRANSFORMS
   border-radius: 70%;
   opacity: .5;
 }
-/* line 234, ../sass/_sidebar.scss */
+/* line 238, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 237, ../sass/_sidebar.scss */
+/* line 241, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 243, ../sass/_sidebar.scss */
+/* line 247, ../sass/_sidebar.scss */
 .logo {
   position: absolute;
   top: 1.5em;
