--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -14,12 +14,48 @@
 	</div>
 	<div class="features">
 		<div class="features-wrapper">
-			<div class="feature">0</div>
-			<div class="feature">0</div>
-			<div class="feature">0</div>
-			<div class="feature">0</div>
-			<div class="feature">0</div>
-			<div class="feature">0</div>
+			<div class="feature">
+				<div class="vam">
+					<img src="/images/realtime.png">
+					<h6>Chatting</h6>
+					<span>has never been so realtime</span>
+				</div>
+			</div>
+			<div class="feature">
+				<div class="vam">
+					<img src="/images/speech-bubble.png">
+					<h6>Markdown</h6>
+					<span>if you're into it</span>
+				</div>
+			</div>
+			<div class="feature">
+				<div class="vam">
+					<img src="/images/compass.png">
+					<h6>Just</h6>
+					<span>some inspirational text</span>
+				</div>
+			</div>
+			<div class="feature">
+				<div class="vam">
+					<img src="/images/search.png">
+					<h6>Just</h6>
+					<span>some inspirational text</span>
+				</div>
+			</div>
+			<div class="feature">
+				<div class="vam">
+					<img src="/images/unlocked.png">
+					<h6>Just</h6>
+					<span>some inspirational text</span>
+				</div>
+			</div>
+			<div class="feature">
+				<div class="vam">
+					<img src="/images/mail.png">
+					<h6>Just</h6>
+					<span>some inspirational text</span>
+				</div>
+			</div>
 		</div>
 	</div>
 </template>
