--- a/client/sass/_sidebar.scss
+++ b/client/sass/_sidebar.scss
@@ -96,7 +96,7 @@
 .buttons-wrapper{
 	text-align: center;
 }
-#logout,#toggleRealtime{
+#logout,#toggleRealtime,#userstats{
 	// float:left;
 	//clear:right;
 	margin-left:0.5em;
