--- a/client/sass/_welcome.scss
+++ b/client/sass/_welcome.scss
@@ -106,41 +106,12 @@ $offset-y:-312px;
 }
 
 
-
 .features{
-	background:white;
-	width: 100%;
-	float:left; //or overflow:hidden
-	padding: 2em;
+	@extend .tiles;
 }
-	.features-wrapper{
-		max-width: $limit + 10em;
-		margin:auto;
-	}
-		.feature{
-			font-family: 'Source Sans Pro', sans-serif;
-			font-weight: 300;
-
-			font-size: .9rem;
-			display:table;
-			width: 33.3%;
-			background:#F3F3F3;
-			padding:2em;
-			float:left;
-			text-align: center;
-			border:1px solid white;
-			height:14em;
-
-			@media all and(max-width: $limit){
-				width: 50%;
-			}
-			
-			h6{
-				font-size: 1.3em;
-			}
-	
-			img{
-				width:2em;
-				height:2em;
-			}
-		}
+.features-wrapper{
+	@extend .tiles-wrapper;
+}
+.feature{
+	@extend .tile;
+}
