--- a/client/views/room.html
+++ b/client/views/room.html
@@ -12,6 +12,8 @@
 				<div class="userinfo">
 					<img class="user-avatar" src="{{avatar}}"/>
 					<span class="user-username">{{username}}</span>
+
+					<a href="/profile" id='userstats' class='button silver' title='view your stats'>view stats</a>
 				</div>
 				
 				<div class='buttons-wrapper'>
