--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -30,9 +30,9 @@
 			</div>
 			<div class="feature">
 				<div class="vam">
-					<img src="/images/compass.png">
-					<h6>Just</h6>
-					<span>some inspirational text</span>
+					<img src="/images/stats.png">
+					<h6>Stats</h6>
+					<span>if you wonder how many characters you typed</span>
 				</div>
 			</div>
 			<div class="feature">
