--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -1,7 +1,4 @@
 <template name="welcome">
-	<div class="blanket medium-text">
-		<span class='vam'>Join the conversation at</span> <span class="vam">{{>selectChatRoom}}</span>
-	</div>
 	<div class="welcome-mast">
 		<div class="welcome-mast-cont">
 			<h1>Chat in <b>realtime</b>, for real</h1>
@@ -11,6 +8,9 @@
 			<h6>Markdown support? hell yeah</h6>
 			<h6>Uh! I almost forgot: it's <b><a style='color:#222;' href="https://github.com/christian-fei/opentalk.me">opensource</a></b></h6>
 		</div>
+	</div>
+	<div class="blanket medium-text">
+		<span class='vam'>Join the conversation at</span> <span class="vam">{{>selectChatRoom}}</span>
 	</div>
 	<div class="features">
 		<div class="features-wrapper">
@@ -25,7 +25,7 @@
 				<div class="vam">
 					<img src="/images/speech-bubble.png">
 					<h6>Markdown</h6>
-					<span>if you're into it</span>
+					<span>if you're into that thing</span>
 				</div>
 			</div>
 			<div class="feature">
@@ -38,22 +38,22 @@
 			<div class="feature">
 				<div class="vam">
 					<img src="/images/search.png">
-					<h6>Just</h6>
-					<span>some inspirational text</span>
+					<h6>Interests</h6>
+					<span>chat about things that interest you</span>
 				</div>
 			</div>
 			<div class="feature">
 				<div class="vam">
 					<img src="/images/unlocked.png">
-					<h6>Just</h6>
-					<span>some inspirational text</span>
+					<h6>Opensource</h6>
+					<span>Would you like to contribute? <a href="https://github.com/christian-fei/opentalk.me">Here you go</a></span>
 				</div>
 			</div>
 			<div class="feature">
 				<div class="vam">
 					<img src="/images/mail.png">
-					<h6>Just</h6>
-					<span>some inspirational text</span>
+					<h6>Notifications</h6>
+					<span>you already know what notifications are, right?</span>
 				</div>
 			</div>
 		</div>
