--- a/client/sass/_profile.scss
+++ b/client/sass/_profile.scss
@@ -1,5 +1,16 @@
 .profile-mast{
 	@extend .welcome-mast;
+
+	.logo{
+		position: absolute;
+		top:1.5em;
+		right:1.5em;
+	}
+	.back{
+		position: absolute;
+		top:1.5em;
+		left:1.5em;	
+	}
 }
 
 .profile-mast-cont{
