--- a/client/sass/_sidebar.scss
+++ b/client/sass/_sidebar.scss
@@ -244,20 +244,11 @@
 }
 
 
-.logo{
-	position:absolute;
-	top:1.5em;
-	right:1em;
-	height:$toggle-size;
-	width:$toggle-size;
-	border-radius: 50%;
-	// border-top-right-radius:0;
-	// border-bottom-right-radius:0;
-	padding:$toggle-size/4;
-	background:$color-main;
-	display: inline-block;
 
-	border:.1em solid darken($color-main,10%);
-
-	// box-shadow: .05em 0em .5em 0em lightgrey;
+.fixed-sidebar{
+	.logo{
+		position:absolute;
+		top:1.5em;
+		right:1em;
+	}
 }
