--- a/client/views/profile.html
+++ b/client/views/profile.html
@@ -1,44 +1,65 @@
 <template name="profile">
+	{{#if currentUser}}
+		<div class="profile-mast">
+			<div class="profile-mast-cont">
+				<a href="/" title='to the homepage' class='go-home-you-are-drunk'>
+					<img src="/images/logo_even_dark.png" alt="" class="logo">
+				</a>
+				<a href="/" title='back' class='go-back-you-are-drunk'>
+					<img src="/images/arrow-left.png" alt="" class="back">
+				</a>
+				<img src="{{avatar}}" alt=""/>
+				<br/>
+				<p>{{username}}</p>
+			</div>
+		</div>
 
-	<div class="profile-mast">
-		<div class="profile-mast-cont">
-			<a href="/" title='to the homepage' class='go-home-you-are-drunk'>
-				<img src="/images/logo_even_dark.png" alt="" class="logo">
-			</a>
-			<img src="{{avatar}}" alt=""/>
-			<br/>
-			<p>{{username}}</p>
+		<div class="stats">
+			<div class="stats-wrapper">
+				<div class="stat">
+					<div class="vam">
+						{{{userMessagesCount}}}
+					</div>
+				</div>
+			</div>
+			<div class="stats-wrapper">
+				<div class="stat">
+					<div class="vam">
+						{{{userRoomsCount}}}
+					</div>
+				</div>
+			</div>
+			<div class="stats-wrapper">
+				<div class="stat">
+					<div class="vam">
+						{{{userCharacters}}}
+					</div>
+				</div>
+			</div>
+			<div class="stats-wrapper">
+				<div class="stat">
+					<div class="vam">
+						{{{memberSince}}}
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
+	{{else}}
+		<div class="profile-mast">
+			<div class="profile-mast-cont">
+				<a href="/" title='to the homepage' class='go-home-you-are-drunk'>
+					<img src="/images/logo_even_dark.png" alt="" class="logo">
+				</a>
+				<a href="/" title='back' class='go-back-you-are-drunk'>
+					<img src="/images/arrow-left.png" alt="" class="back">
+				</a>
+				<h1>Sorry</h1>
+				<h4>you need to be logged in to see your stats</h4>
+			</div>
+		</div>
 
-	<div class="stats">
-		<div class="stats-wrapper">
-			<div class="stat">
-				<div class="vam">
-					{{{userMessagesCount}}}
-				</div>
-			</div>
+		<div class="main">
+			{{>loginForm}}
 		</div>
-		<div class="stats-wrapper">
-			<div class="stat">
-				<div class="vam">
-					{{{userRoomsCount}}}
-				</div>
-			</div>
-		</div>
-		<div class="stats-wrapper">
-			<div class="stat">
-				<div class="vam">
-					{{{userCharacters}}}
-				</div>
-			</div>
-		</div>
-		<div class="stats-wrapper">
-			<div class="stat">
-				<div class="vam">
-					{{{memberSince}}}
-				</div>
-			</div>
-		</div>
-	</div>
+	{{/if}}
 </template>
