--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -31,7 +31,7 @@
 			<div class="feature">
 				<div class="vam">
 					<img src="/images/stats.png">
-					<h6>Stats</h6>
+					<h6><a href="/profile">Stats</a></h6>
 					<span>if you wonder how many characters you typed</span>
 				</div>
 			</div>
